BARC UAT/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <label>Bill To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Pincode__c</fullName>
        <label>Bill To Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration__c</fullName>
        <label>Declaration</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket_Number__c</fullName>
        <label>Docket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Time__c</fullName>
        <label>Invoice Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Boxes__c</fullName>
        <label>Number of Boxes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing List</label>
        <referenceTo>Packing_List__c</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Email__c</fullName>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Pincode__c</fullName>
        <label>Ship To Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Weight__c</fullName>
        <label>Shipment (Weight )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporter_Name__c</fullName>
        <label>Transporter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TI-TN-{0}</displayFormat>
        <label>Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>